--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <link rel="stylesheet" href="styles.css">
     <p>Hey whtsapp bro?</p>
-    <p>new feature is added in it</p>
+    <p>new feature is added in it(button)</p>
 </html>
